@@ -13,6 +13,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10092: Properly reset locale in calendar.Locale*Calendar classes.
+
 - Issue #10459: Update CJK character names to Unicode 5.2.
 
 - Issue #6098: Don't claim DOM level 3 conformance in minidom.
